# tsp-rust

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
assets/images/: traveling_salescrab.xcf
crates/tsp-core/: Cargo.toml  README.md
crates/tsp-core/src/: instance.rs  lib.rs  tsp_lib_spec.rs
crates/tsp-core/src/instance/: distance.rs  distances.rs  edge.rs  mod.rs  node.rs
crates/tsp-core/src/instance/edge/: data.rs  mod.rs
crates/tsp-core/src/instance/edge/data/: mod.rs  symmetric.rs
crates/tsp-core/src/instance/edge/distance/: fixed_point_arithmetic.rs  mod.rs
crates/tsp-macros/src/: lib.rs
crates/tsp-parser/: Cargo.toml  README.md
crates/tsp-parser/benches/: parse_and_compute_dist.rs  parse_into_matrix.rs
crates/tsp-parser/src/: lib.rs
crates/tsp-parser/src/data_section/: distance_function.rs  mod.rs
crates/tsp-parser/src/distance_container/: matrix.rs  mod.rs
crates/tsp-parser/src/distance_data/: mod.rs
crates/tsp-parser/src/metadata/: metadata_builder.rs  mod.rs
crates/tsp-parser/src/metadata_parser/: metadata_builder.rs  mod.rs
crates/tsp-parser/tests/it/: check_against_golden_file.rs  mod.rs  parse_and_compute_dist.rs  parse_without_error.rs
crates/tsp-parser/tests/test_assets/distances/: a280.txt  d198.txt  d493.txt
crates/tsp-rs/: Cargo.toml  README.md
crates/tsp-rs/src/: main.rs
crates/tsp-rust/: Cargo.toml
crates/tsp-rust/src/: main.rs
crates/tsp-solvers/: Cargo.toml  README.md
crates/tsp-solvers/benches/: held_karp.rs  held_karp_parallel.rs  one_tree.rs
crates/tsp-solvers/src/: held_karp.rs  lib.rs
crates/tsp-solvers/src/held_karp/: mod.rs  trees.rs
crates/tsp-solvers/src/held_karp_mod/: mod.rs  trees.rs
crates/tsp-solvers/src/utils/: trees.rs
crates/tsp-solvers/tests/: tests.rs
crates/tsp-solvers/tests/it/: mod.rs
instances/bench/: 12.tsp  results.txt
instances/tsp_rust/: 12.tsp
instances/tsplib_symmetric/: README.md
