[workspace.package]
readme = "README.md"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/traveling-crab"
repository = "https://github.com/raoulluque/traveling-crab"
edition = "2024"
authors = ["Raoul Luqué <raoulsluque@gmail.com>"]
categories = ["algorithms"]

keywords = ["tsp", "algorithms", "graphs", "networks"]
description = "TSP tooling written in Rust."

[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.dependencies]
concorde_rs = "0.1.1"
criterion = { version = "0.7", features = ["html_reports"] }
memchr = "2.7.6"
memmap2 = "0.9.9"
thiserror = "2.0.17"

tsp-core = {path = "crates/tsp-core"}
tsp-parser = {path = "crates/tsp-parser"}
tsp-solvers = {path = "crates/tsp-solvers"}


[profile.release]
debug = true
lto = "off"

[profile.ship]
inherits = "release"
debug = false
lto = "fat"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs_dep)'] }
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
type_complexity = "allow"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"
needless_lifetimes = "allow"
too_many_arguments = "allow"
nonstandard_macro_braces = "warn"

ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"

too_long_first_doc_paragraph = "allow"

std_instead_of_core = "allow"
std_instead_of_alloc = "allow"
alloc_instead_of_core = "allow"

allow_attributes = "warn"
allow_attributes_without_reason = "warn"