[package]
name = "tsp-core"
version = "0.1.0"
description = "Types and utilities for TSP."

keywords = ["tsp", "algorithms", "graphs", "networks"]
categories = ["algorithms"]
readme = "README.md"

license.workspace = true
repository.workspace = true
edition.workspace = true
authors.workspace = true

[features]
# Unused feature in this specific crate but exists for convenience
_miri = []