[package]
name = "tsp-parser"
version = "0.1.0"
description = "TSP parser."

keywords = ["tsp", "algorithms", "graphs", "networks"]
categories = ["parsing"]

readme.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
memchr = {workspace = true}
memmap2 = {workspace = true}
thiserror = {workspace = true}
tsp-core = {workspace = true}

[dev-dependencies]
criterion = {workspace = true}

[features]
_miri = []

[[bench]]
name = "parse_and_compute_dist"
harness = false
