[package]
name = "tsp-rs"
version = "0.1.0"

keywords = ["tsp", "algorithms", "graphs", "networks"]
description = "TSP tooling written in Rust."
readme = "README.md"

license.workspace = true
repository.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true

[dependencies]
tsp-core = { workspace = true}
tsp-parser ={ workspace = true}
tsp-solvers = { workspace = true}

env_logger = "0.11"

[features]
_miri = ["tsp-parser/_miri", "tsp-solvers/_miri"]