[package]
name = "tsp-rust"

keywords = ["tsp", "algorithms", "graphs", "networks"]
description = "TSP tooling written in Rust."

readme.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true

[dependencies]
tsp-core = { workspace = true}
tsp-parser ={ workspace = true}
tsp-solvers = { workspace = true}

env_logger = "0.11"