[package]
name = "tsp-solvers"
version = "0.1.0"
description = "TSP solvers."

keywords = ["tsp", "algorithms", "graphs", "networks"]
categories = ["algorithms"]

readme.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
bitvec = {workspace = true}

tsp-core = {workspace = true}
