[package]
name = "tsp-solvers"
version = "0.1.0"
description = "TSP solvers."

keywords = ["tsp", "algorithms", "graphs", "networks"]
categories = ["algorithms"]

readme.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
bitvec = {workspace = true}

tsp-core = {workspace = true}

[dev-dependencies]
criterion = {workspace = true}
concorde_rs ={ workspace = true}

tsp-parser = {workspace = true}

[[bench]]
name = "one_tree"
harness = false

[[bench]]
name = "held_karp"
harness = false