[package]
name = "tsp-solvers"
version = "0.1.0"
description = "TSP solvers."

keywords = ["tsp", "algorithms", "graphs", "networks"]
categories = ["algorithms"]
readme = "README.md"

license.workspace = true
repository.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tsp-core = {workspace = true}

log = {workspace = true}

[dev-dependencies]
criterion = {workspace = true}
concorde_rs ={ workspace = true}

tsp-parser = {workspace = true}

[features]
_miri = ["tsp-parser/_miri"]

[[bench]]
name = "one_tree"
harness = false

[[bench]]
name = "held_karp"
harness = false

[[bench]]
name = "held_karp_parallel"
harness = false